[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "viernes-ai-policies"
version = "0.1.0"
description = "Viernes AI Emma Agent Policy Configuration"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
include = ["viernes-ai-policies*"]

[tool.setuptools.package-data]
pe_policies = ["*.json"]
