[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emma-policies"
version = "0.1.0"
description = "Emma AI Agent Policy Configuration"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
include = ["emma_policies*"]

[tool.setuptools.package-data]
emma_policies = ["*.json"]
